--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 </html>
 <style>
   body {
-    background-image: url("assets/background.jpg");
+    background-image: url("assets/background1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
   }
